--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "@t-ski/pretty-log",
     "version": "0.1.0",
-    "description": "Pretty console log with simple, nestable formatting options.",
+    "description": " Simple, nestable log message formatter.",
     "author": "Thassilo Martin Schiepanski",
 	"homepage": "https://github.com/@t-ski/pretty-log#readme",
     "keywords": [
@@ -14,32 +14,21 @@
 	"bugs": {
 		"url": "https://github.com/@t-ski/pretty-log/issues"
 	},
-	"main": "./build/api.js",
-    "types": "./types/api.d.ts",
+	"main": "./lib/api.js",
     "files": [
-        "./build/",
-        "./types/"
+        "./lib/"
     ],
     "scripts": {
 		"prepare": "npx husky install",
-        "compile": "npx tsc --project ./tsconfig.debug.json",
-        "compile:watch": "npm run compile -- --watch",
-        "build": "rm -rf ./build/ && rm -rf ./types/ && npx tsc --project ./tsconfig.build.json",
-		"lint": "npx eslint ./src/*.ts",
-		"lint:fix": "npx eslint --fix ./src/*.ts",
-		"format": "npx prettier --check ./src/*.ts",
-		"format:fix": "npx prettier --write ./src/**/*.ts",
-		"test": "npx otes unit ./test/"
+		"lint": "npx eslint ./lib/*.js",
+		"lint:fix": "npx eslint --fix ./lib/*.js",
+		"format": "npx prettier --check ./lib/*.js",
+		"format:fix": "npx prettier --write ./lib/**/*.js",
+		"test": ""
     },
     "devDependencies": {
-        "@types/node": "^20.10.6",
 		"@eslint/js": "^9.2.0",
-		"@typescript-eslint/eslint-plugin": "^7.8.0",
-		"@typescript-eslint/parser": "^7.8.0",
 		"eslint": "^8.57.0",
-		"eslint-plugin-typescript": "^0.14.0",
-		"typescript-eslint": "^7.8.0",
-        "typescript": "^5.3.3",
 		"husky": "^9.0.11",
 		"lint-staged": "^15.2.2",
 		"prettier": "^3.2.5"
