--- a/package.json
+++ b/package.json
@@ -22,8 +22,6 @@
 		"prepare": "npx husky install",
 		"lint": "npx eslint ./lib/*.js",
 		"lint:fix": "npx eslint --fix ./lib/*.js",
-		"format": "npx prettier --check ./lib/*.js",
-		"format:fix": "npx prettier --write ./lib/**/*.js",
 		"test": "node ./test/pretty-log.test.js",
 		"example": "node ./examples.js"
     },
@@ -31,7 +29,6 @@
 		"@eslint/js": "^9.2.0",
 		"eslint": "^8.57.0",
 		"husky": "^9.0.11",
-		"lint-staged": "^15.2.2",
-		"prettier": "^3.2.5"
+		"lint-staged": "^15.2.2"
     }
 }
