--- a/package.json
+++ b/package.json
@@ -3,16 +3,16 @@
     "version": "0.1.0",
     "description": "Pretty log message style interface: color, format, and cursor.",
     "author": "Thassilo Martin Schiepanski",
-	"homepage": "https://github.com/@t-ski/pretty-log#readme",
+	"homepage": "https://github.com/t-ski/pretty-log#readme",
     "keywords": [
 		"console", "log", "color", "format"
 	],
 	"repository": {
 		"type": "git",
-		"url": "git+https://github.com/@t-ski/pretty-log.git"
+		"url": "git+https://github.com/t-ski/pretty-log.git"
 	},
 	"bugs": {
-		"url": "https://github.com/@t-ski/pretty-log/issues"
+		"url": "https://github.com/t-ski/pretty-log/issues"
 	},
 	"main": "./lib/api.js",
     "files": [
